edit and delete buttons working

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -13,13 +13,13 @@
 <nav th:fragment="navbar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home</a>
+      <a class="nav-link active" href="/posts">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Create</a>
+      <a class="nav-link" href="/posts/create">Create</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Edit</a>
+      <a class="nav-link" href="/posts/edit">Edit</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled">Show</a>
