--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,6 @@
     <title>Home View Test</title>
 </head>
 <body>
-<h1>This is the home page homie</h1>
+<h1>This is the home page homie,what it dew</h1>
 </body>
 </html>
